--- a/testing/testing-checking suwo functions.Rmd
+++ b/testing/testing-checking suwo functions.Rmd
@@ -471,7 +471,7 @@ devtools::check(document = TRUE, run_dont_test = TRUE, vignettes = FALSE, manual
 # devtools::install()
 
 ## set XC Key
-Sys.setenv(XENO_CANTO_API_KEY = getPass::getPass())
+# Sys.setenv(XENO_CANTO_API_KEY = getPass::getPass())
 
   run.all()
   options(verbose = TRUE)
