--- a/README.Rmd
+++ b/README.Rmd
@@ -70,6 +70,9 @@ library(suwo)
 
 The [suwo](https://github.com/maRce10/suwo) package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. **Any commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
 
+
+Take a look at the [package vignette](./articles/suwo.html) for an overview of the main features of the packages.
+
 ## Citation
 
 Please cite [suwo](https://github.com/maRce10/suwo) as follows:
